--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,22 +1,40 @@
-
 <!DOCTYPE html>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="../static/css/login.css">
+<style>
+   body {
+   background-image: url('../static/assets/back.jpg');
+   }
+</style>
 <html>
-    <head>
-        <title>ECE1779 Assignment 1 - Register</title>
-    </head>
-
-      <body>
-          <div class='error'>{{ret_msg if ret_msg != None}}</div>
-
-        <h1>Create a new account</h1>
-         <form action='{{url_for('register')}}' method="post">
-             Username <input type="text" name="username" value="{{username if username  != None}}"><br>
-             Password <input type="password" name="password" value="{{password if password  != None}}"><br>
-             Confirm Password <input type="password" name="confirm_password" value="{{password if password  != None}}"><br>
-
-        <input type="submit" value="Register">
-        <input type="reset">
-        </form>
-
-    </body>
+   <head>
+      <title>ECE1779 Assignment 1 - Register</title>
+      <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0"/>
+   </head>
+   <body class="text-center">
+      <form action='{{ url_for('register') }}' method="post" class="form-signin">
+      <div class="alert alert-danger" role="alert"
+         style="visibility: {{ hidden }}">{{ error_msg if error_msg != None }}</div>
+      <h1 class="h3 mb-3 font-weight-normal" style="color: white">Create a new account</h1>
+      <br>
+      <input type="text" placeholder="Username" name="username" value="{{ username if username  != None }}"
+         class="form-control"><br>
+      <input type="password" placeholder="Password" name="password" value="{{ password if password  != None }}"
+         class="form-control"><br>
+      <input type="password" placeholder="Confirm Password" name="confirm_password"
+         value="{{ password if password  != None }}" class="form-control"><br><br>
+      <input type="submit" value="Register" class="btn btn-lg btn-secondary btn-block" style="
+         width: 45%;
+         display: inline-block;
+         margin-right: 10px;
+         ">
+      <input type="reset" class="btn btn-lg btn-secondary btn-block" style="
+         width: 45%;
+         display: inline-block;
+         margin-top: 0px;
+         margin-right: 10px;
+         ">
+      </form>
+   </body>
 </html>
