Update UI for profile page (not finished)

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
 
 <style>
     body {
-        background-image: url('../static/assets/back.jpg');
+        background-image: url('../static/assets/background.jpg');
     }
 
 </style>
