--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="../static/css/login.css">
 <style>
    body {
-   background-image: url('../static/assets/back.jpg');
+   background-image: url('../static/assets/background.jpg');
    }
 </style>
 <html>
