--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -30,7 +30,7 @@
     <input type="password" placeholder="Password" name="password" value="{{ password if password  != None }}"
            class="form-control"><br><br>
     <input type="submit" value="Login" class="btn btn-lg btn-secondary btn-block" style="margin-bottom: 20px">
-    <span style="color:white">Not a member?</span><a href="/register/form"> Register</a>
+    <span style="color:white">Not a member?</span><a href="/register"> Register</a>
 
 </form>
 
