--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -45,7 +45,7 @@
 
 
 
-    <div>{{ret_msg if ret_msg != None}}</div>
+    <div style="visibility: {{hidden}}">{{ret_msg if ret_msg != None}}</div>
 <div style="text-align: center">
     {% for image in images %}
         <br/><br/>
