--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,13 +28,19 @@
          width: 45%;
          display: inline-block;
          margin-right: 10px;
+         margin-bottom: 20px;
          ">
       <input type="reset" class="btn btn-lg btn-secondary btn-block" style="
          width: 45%;
          display: inline-block;
          margin-top: 0px;
          margin-right: 10px;
+                  margin-bottom: 20px;
+
          ">
+
+          <span style="color:white">Registered?</span><a href="/main"> Login</a>
+
       </form>
    </body>
 </html>
