--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -1,22 +1,90 @@
+html,
+body {
+  height: auto;
+    margin: 0px;
+
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+}
+
+
 body{
     display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
   align-items: center;
-      background-position: center;
+    background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
 }
 
 .container{
       background-color: rgba(150, 150, 150, 0.2);
-    width: 80%;
-    height: 90%;
+    width: 900px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    height: 80%;
     padding: 50px;
     color:white;
+    min-height: 700px;
+}
+
+.delete-form{
+    margin-top: -220px;
+    position: absolute;
+    margin-left: 910px;
 
 }
+
+
+.original{
+  object-fit:cover;
+  object-position:center;
+  height:420px;
+  width:420px;
+}
+
+.crop{
+    position: absolute;
+    bottom:0px;
+    left:0px;
+    margin-bottom: -420px;
+    margin-left:-425px;
+    width:420px;
+    height: auto;
+    border:2px white solid;
+}
+
+a._tooltip span {
+    z-index:10;
+  display:none;
+
+}
+
+a._tooltip:hover span{
+   display:inline;
+  position:absolute;
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert {
+    position: relative;
+    padding: .75rem 1.25rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+
+
+
