--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -2,7 +2,6 @@ html,
 body {
   height: auto;
     margin: 0px;
-
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
     font-size: 1rem;
     font-weight: 400;
@@ -16,7 +15,6 @@ body{
   -ms-flex-align: center;
   align-items: center;
     background-position: center;
-  background-repeat: no-repeat;
   background-size: cover;
 
 }
@@ -35,27 +33,37 @@ body{
 }
 
 .delete-form{
-    margin-top: -220px;
+        margin-top: 160px;
     position: absolute;
-    margin-left: 910px;
-
+    margin-left: -60px;
+    display: inline-flex;
 }
 
 
 .original{
-  object-fit:cover;
-  object-position:center;
-  height:420px;
-  width:420px;
+    max-width:100%;
+    max-height:100%;
+}
+
+.thumbnails{
+    display: inline-block;
+    height:190px;
+    width:190px;
+    border: 2px black solid;
+    text-align: center;
+    vertical-align: bottom;
+    background-color: black;
+    margin-bottom: 25px;
 }
 
 .crop{
     position: absolute;
     bottom:0px;
     left:0px;
-    margin-bottom: -420px;
-    margin-left:-425px;
-    width:420px;
+    margin-bottom: -100px;
+    margin-left:-100px;
+    max-height:300px;
+    max-width:300px;
     height: auto;
     border:2px white solid;
 }
