--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -39,24 +39,25 @@
     <div style="visibility: {{ hidden }}" class="alert alert-success" role="alert">{{ ret_msg if ret_msg != None }}</div>
 
 
-    <div style="text-align: center">
-        {% for image in images %}
-            <br/><br/>
-            <div>
-                <a class="_tooltip" style="margin-right: 50px;">
-                    <img src="{{ image[2] }}" class="original"/>
+    <div style="text-align: left">
+<div>
 
-                    <span>
-                        <img src="{{ image[2] }}" class="crop"/>
-                    </span>
-                </a>
-                <a class="_tooltip">
-                    <img src="{{ image[3] }}" class="original"/>
+        {% for image in images %}
+                <a class="_tooltip" style="margin-right: 25px;"
+
+                   href="/image/ {{ image[2].replace("/", "__") }}/{{ image[3].replace("/", "__") }}"
+
+                >
+
+                    <div class="thumbnails">
+                    <img src="{{ image[2] }}" class="original" />
+
+                    </div>
+
                     <span>
                         <img src="{{ image[3] }}" class="crop"/>
                     </span>
                 </a>
-            </div>
 
             <form action="{{ url_for('delete_image',id=image[0]) }}" method='post'
                   onsubmit='return confirm("Do you want to delete the image?")' class="delete-form">
@@ -65,7 +66,7 @@
                 </button>
             </form>
         {% endfor %}
-
+</div>
     </div>
 </div>
 </body>
