--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,12 +3,6 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="../static/css/login.css">
 
-<style>
-    body {
-        background-image: url('../static/assets/background.jpg');
-    }
-
-</style>
 
 <html>
 <head>
@@ -19,18 +13,34 @@
 
 <body class="text-center">
 
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">PhotoWebServer</a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="/main">Login</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/register">Register</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
 <form action='{{ url_for('login') }}' method="post" class="form-signin">
 
     <div class="alert alert-danger" role="alert" style="visibility: {{ hidden }}">{{ ret_msg if ret_msg != None }}</div>
 
-    <h1 class="h3 mb-3 font-weight-normal" style="color:white">Login</h1><br>
+    <h1 class="h3 mb-3 font-weight-normal">Login</h1><br>
 
     <input type="text" placeholder="Username" name="username" value="{{ username if username  != None }}"
            class="form-control"><br>
     <input type="password" placeholder="Password" name="password" value="{{ password if password  != None }}"
            class="form-control"><br><br>
-    <input type="submit" value="Login" class="btn btn-lg btn-secondary btn-block" style="margin-bottom: 20px">
-    <span style="color:white">Not a member?</span><a href="/register"> Register</a>
+    <input type="submit" value="Login" class="btn btn-lg btn-primary btn-block" style="margin-bottom: 20px">
+    <span style="color:black">Not a member?</span><a href="/register"> Register</a>
 
 </form>
 
