--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -11,16 +11,16 @@ body {
 
 body {
     display: -ms-flexbox;
-    display: flex;
     -ms-flex-align: center;
     align-items: center;
     background-position: center;
     background-size: cover;
+    background-color: rgba(150, 150, 150, 0.2);
 
 }
 
 .container {
-    background-color: rgba(150, 150, 150, 0.2);
+    background-color: white;
     width: 900px;
     margin-left: auto;
     margin-right: auto;
@@ -28,7 +28,7 @@ body {
     margin-bottom: 50px;
     height: 80%;
     padding: 50px;
-    color: white;
+    color: black;
     min-height: 700px;
 }
 
