--- a/app/static/css/profile.css
+++ b/app/static/css/profile.css
@@ -21,21 +21,22 @@ body {
 
 .container {
     background-color: white;
-    width: 900px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 50px;
     margin-bottom: 50px;
     height: 80%;
-    padding: 50px;
+    padding: 100px;
     color: black;
     min-height: 700px;
+
 }
 
 .delete-form {
-    margin-top: 160px;
+    margin-top: 190px;
     position: absolute;
-    margin-left: -60px;
+    margin-left: -65px;
     display: inline-flex;
 }
 
@@ -47,8 +48,8 @@ body {
 
 .thumbnails {
     display: inline-block;
-    height: 190px;
-    width: 190px;
+    height: 230px;
+    width: 230px;
     border: 2px black solid;
     text-align: center;
     vertical-align: bottom;
