--- a/Manager/app/templates/ec2_details.html
+++ b/Manager/app/templates/ec2_details.html
@@ -149,7 +149,7 @@ var cpu_myChart = new Chart(cpu_ctx, {
                 display: true,
                 scaleLabel: {
                     display: true,
-                    labelString: 'Time',
+                    labelString: 'Time (UTC Time Zone)',
                 },
                 ticks: {
                     stepSize: 5
@@ -159,7 +159,7 @@ var cpu_myChart = new Chart(cpu_ctx, {
 
                 scaleLabel: {
                     display: true,
-                    labelString: 'CPU Utilization ( Percent )'
+                    labelString: 'CPU Utilization (Percent)'
                 },
                 ticks: {
                     beginAtZero:true,
