--- a/Manager/app/templates/ec2_list.html
+++ b/Manager/app/templates/ec2_list.html
@@ -32,6 +32,8 @@
       <ul class="nav navbar-nav navbar-left">
         <li><a href="/main">Worker Pool</a></li>
         <li><a href="/s3_list">S3 List</a></li>
+                  <li><a href="/scale_params">Scale Parameters</a></li>
+
       </ul>
 
 <!--{#      <ul class="nav navbar-nav navbar-right">#}-->
